# nasergame

./: README.md  docs-3d.md  setup.cfg
nasergame/: _version.py  main.py  scaleddisplay.py
nasergame/components/: __init__.py  polyline.py  wireframe.py
nasergame/lib/: createPerspective.js  draw3d.py  math.py  math3d.py  matrix.py  models.py  objmodel.py  utils.py
nasergame/lib/modelparsers/: obj.py
