[metadata]
name = nasergame
version = 0.0.1
description = A retro 3D wireframe space trading and combat simulator
long_description = file: README.md
long_description_content_type = text/markdown
author = Natalie Fearnley
author_email = nfearnley@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Topic :: Games/Entertainment
    Topic :: Games/Entertainment :: Simulation
    Topic :: Software Development :: Libraries :: pygame
keywords = game, space, simulator
project_urls =
    Source=https://github.com/nfearnley/nasergame
    Tracker=https://github.com/nfearnley/nasergame/issues

[options]
packages = find:
python_requires = >=3.8
zip_safe = yes
install_requires =
    pygame==1.9.6; platform_system != "Darwin"
    pygame==2.0.0dev10; platform_system == "Darwin"
    digicolor @ git+git://github.com/DigiDuncan/DigiColor

[options.extras_require]
dev =
    autopep8==1.4.4
    flake8==3.7.9
    pytest==5.3.1

[options.entry_points]
console_scripts =
    nasergame=nasergame.main:main

[flake8]
ignore = E501
per-file-ignores =
    */__init__.py:F401,F403
